Optimize Dockerfile, .dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -4,3 +4,22 @@
 Dockerfile
 .dockerignore
 docker-compose.yml
+deployment/
+**/__pycache__
+*.pyc
+*.pyo
+*.pyd
+.Python
+.pytest_cache
+.coverage
+htmlcov
+.env
+.venv
+venv
+*.egg-info
+dist
+build
+.DS_Store
+*.log
+.idea/
+.vscode/
